Fixed bug, social icons could not be seen on home page portrait mode on mobile devices

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -64,8 +64,18 @@
 }
 // Mobile phones
 @include mediaSm {
-    main#home h1 {
-        margin-top: 10vh;
+    main{
+        padding: 2rem;
+
+        #home h1 {
+            margin-top: 7vh;
+        }
+
+        .lg-heading {
+            margin-top: 1rem;
+            font-size: 5rem;
+        }
+
     }
     .projects {
         grid-template-columns: 1fr;
